--- a/myproject/timetracker/templates/timetracker/project_detail.html
+++ b/myproject/timetracker/templates/timetracker/project_detail.html
@@ -23,7 +23,7 @@
         </tr>
       {% endfor %}
     </table>
-    
+
     <h2>Add New Time Entry</h2>
 
     <form method="post">
@@ -31,6 +31,13 @@
       {{ form }}
       <input type="submit" value="Submit" />
     </form>
+
+    {% if messages %}
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+    {% endif %}
+    
     <a href="{% url 'timetracker:projects' %}">Back to Projects</a>
 </body>
 </html>
