changed time_entry url name to project and created url for deleting time entry

--- a/myproject/timetracker/templates/timetracker/project_list.html
+++ b/myproject/timetracker/templates/timetracker/project_list.html
@@ -8,7 +8,7 @@
     <ul>
         {% for project in object_list  %}
             <li>
-                <a href="{% url 'timetracker:time_entry' project.id %}">{{ project.name }}</a>
+                <a href="{% url 'timetracker:project' project.id %}">{{ project.name }}</a>
                 {% if project.description %}
                     - {{ project.description }}
                 {% endif %}
