--- a/myproject/timetracker/templates/timetracker/project_detail.html
+++ b/myproject/timetracker/templates/timetracker/project_detail.html
@@ -10,12 +10,19 @@
         <th>Task Description</th>
         <th>Hours Worked</th>
         <th>Date Created</th>
+        <th>Delete</th>
       </tr>
       {% for timeentry in project.timeentry_set.all %}
         <tr>
           <td>{{ timeentry.description }}</td>
           <td>{{ timeentry.worked_hours }}</td>
           <td>{{ timeentry.created_at }}</td>
+          <td>
+            <form method="post" action="{% url 'timetracker:delete_time_entry' project.id timeentry.id %}" style="display:inline;">
+              {% csrf_token %}
+              <button type="submit" onclick="return confirm('Are you sure you want to delete this timeentry?');">Delete</button>
+            </form>
+          </td>
         </tr>
       {% empty %}
         <tr>
