added user creation path and template, fixed template for timetracker index

--- a/myproject/accounts/templates/registration/login.html
+++ b/myproject/accounts/templates/registration/login.html
@@ -10,6 +10,6 @@
         {{ form.as_p }}
         <button type="submit">Login</button>
     </form>
-    <a href="{% url 'timetracker:index' %}">Back to Home</a>
+    <a href="{% url 'accounts:register' %}">Register</a>
 </body>
 </html>
