--- a/myproject/timetracker/templates/timetracker/index.html
+++ b/myproject/timetracker/templates/timetracker/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8" />
-    <title>title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Time Tracker{% endblock %}
+{% block content %}
     <h1>Welcome, {{user.username}}!</h1>
-</body>
-</html>
+{% endblock %}
