--- a/myproject/timetracker/templates/timetracker/project_detail.html
+++ b/myproject/timetracker/templates/timetracker/project_detail.html
@@ -1,50 +1,46 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ project.name }} Time Entries</title>
-</head>
-<body>
-    <h1>All {{ project.name }} Time Entries</h1>
-    <table>
+{% extends 'base.html' %}
+{% block title %}{{ project.name }} Time Entries{% endblock %}
+{% block content %}
+  <h1>All {{ project.name }} Time Entries</h1>
+  <table>
+    <tr>
+      <th>Task Description</th>
+      <th>Hours Worked</th>
+      <th>Date Created</th>
+      <th>Delete</th>
+    </tr>
+    {% for timeentry in project.timeentry_set.all %}
       <tr>
-        <th>Task Description</th>
-        <th>Hours Worked</th>
-        <th>Date Created</th>
-        <th>Delete</th>
+        <td>{{ timeentry.description }}</td>
+        <td>{{ timeentry.worked_hours }}</td>
+        <td>{{ timeentry.created_at }}</td>
+        <td>
+          <form method="post" action="{% url 'timetracker:delete_time_entry' project.id timeentry.id %}" style="display:inline;">
+            {% csrf_token %}
+            <button type="submit" onclick="return confirm('Are you sure you want to delete this timeentry?');">Delete</button>
+          </form>
+        </td>
       </tr>
-      {% for timeentry in project.timeentry_set.all %}
-        <tr>
-          <td>{{ timeentry.description }}</td>
-          <td>{{ timeentry.worked_hours }}</td>
-          <td>{{ timeentry.created_at }}</td>
-          <td>
-            <form method="post" action="{% url 'timetracker:delete_time_entry' project.id timeentry.id %}" style="display:inline;">
-              {% csrf_token %}
-              <button type="submit" onclick="return confirm('Are you sure you want to delete this timeentry?');">Delete</button>
-            </form>
-          </td>
-        </tr>
-      {% empty %}
-        <tr>
-          <td colspan="2">No tasks found.</td>
-        </tr>
-      {% endfor %}
-    </table>
+    {% empty %}
+      <tr>
+        <td colspan="2">No tasks found.</td>
+      </tr>
+    {% endfor %}
+  </table>
 
-    <h2>Add New Time Entry</h2>
+  <h2>Add New Time Entry</h2>
 
-    <form method="post">
-      {% csrf_token %}
-      {{ form }}
-      <input type="submit" value="Submit" />
-    </form>
+  <form method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit" />
+  </form>
 
-    {% if messages %}
-      {% for message in messages %}
-        <li>{{ message }}</li>
-      {% endfor %}
-    {% endif %}
-    
-    <a href="{% url 'timetracker:projects' %}">Back to Projects</a>
-</body>
-</html>
+  {% if messages %}
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+  {% endif %}
+  
+  <a href="{% url 'timetracker:projects' %}">Back to Projects</a>
+{% endblock %}
