--- a/myproject/timetracker/templates/timetracker/project_list.html
+++ b/myproject/timetracker/templates/timetracker/project_list.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Projects</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Projects{% endblock %}
+{% block content %}
     <h1>All Projects</h1>
     <ul>
         {% for project in object_list  %}
@@ -18,5 +15,4 @@
         {% endfor %}
     </ul>
     <a href="{% url 'timetracker:index' %}">Back to Home</a>
-</body>
-</html>
+{% endblock %}
