removed auth.urls in accounts and create new path for login and logout

--- a/myproject/accounts/templates/registration/create_user.html
+++ b/myproject/accounts/templates/registration/create_user.html
@@ -10,6 +10,6 @@
         {{ form.as_p }}
         <button type="submit">Sign Up</button>
     </form>
-    <a href="{% url 'timetracker:index' %}">Back to Home</a>
+    <a href="{% url '' %}">Back to Home</a>
 </body>
 </html>
