add link to project on timetracker index

--- a/myproject/timetracker/templates/timetracker/index.html
+++ b/myproject/timetracker/templates/timetracker/index.html
@@ -2,4 +2,6 @@
 {% block title %}Time Tracker{% endblock %}
 {% block content %}
     <h1>Welcome, {{user.username}}!</h1>
+  
+    <a href="{% url 'timetracker:projects' %}">Projects</a>
 {% endblock %}
