--- a/myproject/timetracker/templates/timetracker/project_detail.html
+++ b/myproject/timetracker/templates/timetracker/project_detail.html
@@ -15,7 +15,7 @@
         <td>{{ timeentry.description }}</td>
         <td>{{ timeentry.worked_hours }}</td>
         <td>{{ timeentry.created_at }}</td>
-        <td>{{ timeentry.user }}</td>
+        <td><a href="{% url 'timetracker:user' timeentry.user.id %}">{{ timeentry.user }}</a></td>
         <td>
           <form method="post" action="{% url 'timetracker:delete_time_entry' project.id timeentry.id %}" style="display:inline;">
             {% csrf_token %}
