--- a/myproject/timetracker/templates/timetracker/user_detail.html
+++ b/myproject/timetracker/templates/timetracker/user_detail.html
@@ -2,6 +2,7 @@
 {% block title %}{{ user.username }} Time Entries{% endblock %}
 {% block content %}
   <h1>{{ user.username }} Time Entries</h1>
+  <h2>Total Hours Worked: {{ total_hours_worked_by_user }}</h2>
   <table>
     <tr>
       <th>Project</th>
