--- a/myproject/timetracker/templates/timetracker/user_project_detail.html
+++ b/myproject/timetracker/templates/timetracker/user_project_detail.html
@@ -1,24 +1,23 @@
 {% extends 'base.html' %}
-{% block title %}{{ user.username }} Time Entries{% endblock %}
+{% block title %}{{ project.name }} Time Entries for {{ current_user }}{% endblock %}
 {% block content %}
-  <h1>{{ user.username }} Time Entries in the past week</h1>
-  <h2>Total hours worked this past week: {{ total_hours_worked_by_user }}</h2>
+  <h1>{{ project.name }} Time Entries for {{ current_user }}</h1>
   <table>
     <tr>
-      <th>Project</th>
       <th>Task Description</th>
       <th>Hours Worked</th>
       <th>Date Created</th>
+      <th>User</th>
       <th>Delete</th>
     </tr>
-    {% for timeentry in past_week_time_entries %}
+    {% for timeentry in user_time_entries %}
       <tr>
-        <td>{{ timeentry.project }}</td>
         <td>{{ timeentry.description }}</td>
         <td>{{ timeentry.worked_hours }}</td>
         <td>{{ timeentry.created_at }}</td>
+        <td><a href="{% url 'timetracker:user' timeentry.user.id %}">{{ timeentry.user }}</a></td>
         <td>
-          <form method="post" action="{% url 'timetracker:delete_time_entry' timeentry.project.id timeentry.id %}" style="display:inline;">
+          <form method="post" action="{% url 'timetracker:delete_time_entry' project.id timeentry.id %}" style="display:inline;">
             {% csrf_token %}
             <button type="submit" onclick="return confirm('Are you sure you want to delete this timeentry?');">Delete</button>
           </form>
@@ -30,14 +29,14 @@
       </tr>
     {% endfor %}
   </table>
-{% comment %} 
+
   <h2>Add New Time Entry</h2>
 
   <form method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit" />
-  </form> {% endcomment %}
+  </form>
 
   {% if messages %}
     {% for message in messages %}
