--- a/myproject/timetracker/templates/timetracker/user_project_detail.html
+++ b/myproject/timetracker/templates/timetracker/user_project_detail.html
@@ -17,7 +17,7 @@
         <td>{{ timeentry.created_at }}</td>
         <td><a href="{% url 'timetracker:user' current_user.id %}">{{ timeentry.user }}</a></td>
         <td>
-          <form method="post" action="{% url 'timetracker:delete_time_entry' project.id timeentry.id %}" style="display:inline;">
+          <form method="post" action="{% url 'timetracker:delete_time_entry' timeentry.id %}" style="display:inline;">
             {% csrf_token %}
             <button type="submit" onclick="return confirm('Are you sure you want to delete this timeentry?');">Delete</button>
           </form>
