--- a/myproject/timetracker/templates/timetracker/user_week_detail.html
+++ b/myproject/timetracker/templates/timetracker/user_week_detail.html
@@ -18,7 +18,7 @@
         <td>{{ timeentry.worked_hours }}</td>
         <td>{{ timeentry.created_at }}</td>
         <td>
-          <form method="post" action="{% url 'timetracker:delete_time_entry' timeentry.project.id timeentry.id %}" style="display:inline;">
+          <form method="post" action="{% url 'timetracker:delete_time_entry' timeentry.id %}" style="display:inline;">
             {% csrf_token %}
             <button type="submit" onclick="return confirm('Are you sure you want to delete this timeentry?');">Delete</button>
           </form>
@@ -30,14 +30,6 @@
       </tr>
     {% endfor %}
   </table>
-{% comment %} 
-  <h2>Add New Time Entry</h2>
-
-  <form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit" />
-  </form> {% endcomment %}
 
   {% if messages %}
     {% for message in messages %}
