--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -15,6 +15,8 @@
     {% else %}
         <a href="{% url 'accounts:login' %}">Login</a>
     {% endif %}
+    {% block header_content %}
+    {% endblock %}
     </header>
 
     {% block content %}
