--- a/myproject/timetracker/templates/timetracker/project_list.html
+++ b/myproject/timetracker/templates/timetracker/project_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'timetracker\base.html' %}
 {% block title %}Projects{% endblock %}
 {% block content %}
     <h1>All Projects</h1>
