--- a/myproject/timetracker/templates/timetracker/project_list.html
+++ b/myproject/timetracker/templates/timetracker/project_list.html
@@ -14,5 +14,18 @@
             <li>No projects found.</li>
         {% endfor %}
     </ul>
+
+  <form method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit" />
+  </form>
+
+  {% if messages %}
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+  {% endif %}
+  
     <a href="{% url 'timetracker:index' %}">Back to Home</a>
 {% endblock %}
