added working docker settings, setup env for database_hostname, make template dir reference linux friendly

--- a/myproject/timetracker/templates/timetracker/index.html
+++ b/myproject/timetracker/templates/timetracker/index.html
@@ -1,4 +1,4 @@
-{% extends 'timetracker\base.html' %}
+{% extends 'timetracker/base.html' %}
 {% block title %}Time Tracker{% endblock %}
 {% block content %}
     <h1>Welcome, {{user.username}}!</h1>
