--- a/myproject/timetracker/templates/timetracker/user_week_detail.html
+++ b/myproject/timetracker/templates/timetracker/user_week_detail.html
@@ -1,4 +1,4 @@
-{% extends 'timetracker\base.html' %}
+{% extends 'timetracker/base.html' %}
 {% block title %}{{ target_user.username }} Time Entries{% endblock %}
 {% block content %}
   <h1>{{ target_user.username }} Time Entries in the past week</h1>
