--- a/myproject/timetracker/templates/timetracker/project_detail.html
+++ b/myproject/timetracker/templates/timetracker/project_detail.html
@@ -1,4 +1,4 @@
-{% extends 'timetracker\base.html' %}
+{% extends 'timetracker/base.html' %}
 {% block title %}{{ project.name }} Time Entries{% endblock %}
 {% block content %}
   <h1>All {{ project.name }} Time Entries</h1>
