--- a/myproject/timetracker/templates/timetracker/user_project_detail.html
+++ b/myproject/timetracker/templates/timetracker/user_project_detail.html
@@ -1,4 +1,4 @@
-{% extends 'timetracker\base.html' %}
+{% extends 'timetracker/base.html' %}
 {% block title %}{{ project.name }} Time Entries for {{ target_user }}{% endblock %}
 {% block content %}
   <h1>{{ project.name }} Time Entries for {{ target_user }}</h1>
