--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'assets/style.css' %}">
 </head>
 <body>
     <header>
